# thought

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  editor_wrapper.rs  error.rs  lib.rs  main.rs  state.rs  thought.rs  thought_collection.rs  thought_id.rs  thought_manager.rs  truncate.rs  words.rs
