[package]
name = "thought"
version = "1.0.1"
description = "Save your thoughts for later."
license = "MIT"
documentation = "https://docs.rs/thought"
homepage = "https://github.com/silvasch/thought"
repository = "https://github.com/silvasch/thought"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = "4.5.20"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
term_size = "0.3.2"
toml = "0.8.19"
xdg = "2.5.2"
